2013-04-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* design/pixel-cache-struct.dot: Update structure relationships
	diagram.

	* design/pixel-cache.dot: Update call flow diagram.

	* magick/pixel_cache.c: Eliminate use of internal functions
	GetNexusIndexes(), GetNexusPixels().  Reduce usage of internal
	function IsNexusInCore().

2013-04-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: MAGICK_SSIZE_T should always be a signed type.

	* coders/jpeg.c (WriteXMPProfile): Add support for writing 'XMP'
	profile in JPEG.
	(WriteJPEGImage): Restructure/tidy JPEG profile writing code.

2013-04-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Return DirectClass images by
	default for MINISWHITE and MINISBLACK TIFF formats.

2013-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c, magick/attribute.c, magick/map.c, magick/render.c,
	magick/widget.c, magick/xwindow.c: Fixes to reduce warnings with
	GCC 4.8.0 at -O3 optimimization level, and for clang 3.2.

2013-04-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/xwindow.c (MagickXMakeImage): Use ThumbnailImage() rather
	than SampleImage() when creating the panner image to improve the
	quality of the image.

2013-03-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (tag_table): Add support for SubjectArea EXIF
	tag.  Resolves SourceForge issue #229 "Cannot Parse the
	SubjectArea EXIF Info".

2013-03-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/Hg.rst, www/index.rst: Update SourceForge Mercurial
	repository location (see
	http://hg.code.sf.net/p/graphicsmagick/code) due to project
	"upgrade".  For the moment there are old and new
	repositories. Changes will be pushed to the new repository.

2013-03-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resource.c (InitializeMagickResources): Revert use of
	omp_set_dynamic() since it caused a severe performance regression