@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020130428"
-#define public MagickPackageReleaseDate "snapshot-20130428"
+#define public MagickPackageVersionAddendum ".020130720"
+#define public MagickPackageReleaseDate "snapshot-20130720"
